--- a/practica1/src/main/resources/application.properties
+++ b/practica1/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=practica1
+
+spring.datasource.url=jdbc:mysql://localhost:3306/practicaspring1
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# MySQL Connector/J driver
+spring.jpa.hibernate.ddl-auto=update
+# crear clases que sirven como modelo en la base de datos / cada vez que una clase usa Entity hace que coinsida con una tabla en la base de datos
+spring.jpa.show-sql=true
+# mostrar las consultas SQL en la consola
+spring.jpa.properties.hibernate.format_sql=true
+# formatear las consultas SQL para mejor legibilidad
